# meeting-prep-assistant

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
docs/: Product-plan.md  Prompt-Template.md  architecture.md  build-log.md  decisions.md  evaluation-plan.md  roadmap.md  security-guardrails.md
docs/research/: product-experience.md  product-name.md  product-specification-v1.md
docs/spikes/: spike-1-desktop-foundation.md  spike-2-google-oauth-calendar.md  spike-3-gmail-drive-context.md  spike-4-brief-notification-flow.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: brief_generation.rs  google_auth.rs  lib.rs  main.rs
